# durak

./: .gitignore  README.md  build.sh  gen_antlr.sh  setup.cfg
antlr/: .gitignore  DurakLexer.g4  DurakParser.g4
docs/: README.md
durak/: __init__.py  __main__.py.txt
durak/grammar/: .gitignore  __init__.py
examples/blog/: article.drc  index.dr  index.py  page.drc
examples/blog/articles/: hello.dr  hello.json  lorem_ipsum.dr  lorem_ipsum.json
