[metadata]
name = durak
version = 0.1.0
author = Łukasz Drukała
license = AGPLv3
license_files = LICENSE
description = HTML templating language and static site generator

[options]
packages =
	durak
	durak.grammar
install_requires =
	antlr4-python3-runtime

[options.entry_points]
console_scripts =
	durak = durak:main
