[metadata]
name = durak
version = 0.1.3
author = Łukasz Drukała
author_email = masflam@masflam.com
url = https://github.com/MasFlam/durak
license = AGPLv3
license_files = LICENSE
description = HTML templating language and static site generator

[options]
packages =
	durak
	durak.grammar
install_requires =
	antlr4-python3-runtime == 4.10

[options.entry_points]
console_scripts =
	durak = durak:main
